--- a/index.html
+++ b/index.html
@@ -2,110 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Website development in Hampshire, UK">
+  <meta name="author" content="Maractive">
+  <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebWorks Studio</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
-    /* Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
-    }
-
-    header {
-      background: #1e1e1e;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #444;
-    }
-
-    nav a {
-      color: white;
-      padding: 15px 20px;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      background: #333;
-    }
-
-    .hero {
-      background: linear-gradient(#3f51b5, #1a237e);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    section {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-
-    .service {
-      flex: 1 1 300px;
-      background: #f5f5f5;
-      padding: 20px;
-      border-radius: 5px;
-    }
-
-    .about {
-      background: #e0e0e0;
-    }
-
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    input, textarea {
-      padding: 10px;
-      width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    button {
-      padding: 10px;
-      background: #3f51b5;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #303f9f;
-    }
-
-    footer {
-      background: #1e1e1e;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-
-    @media (max-width: 768px) {
-      .services {
-        flex-direction: column;
-      }
-    }
+  
   </style>
 </head>
 <body>
