--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <header>
-    <h1>WebWorks Studio</h1>
-    <p>Your vision, our code</p>
+    <h1>Maractive Studio</h1>
+    <p>Vision through code</p>
   </header>
 
   <nav>
