--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Maractive">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebWorks Studio</title>
+  <title>Maractive Studio</title>
   <link rel="stylesheet" href="styles.css">
   
 </head>
