--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>Maractive Studio</h1>
+    <span>Maractive Studio</span>
     <p>Vision through code</p>
   </header>
 
@@ -23,7 +23,7 @@
   </nav>
 
   <div class="hero">
-    <h2>We craft modern websites for modern brands</h2>
+    <h1>Crafting modern websites for modern businesses</h1>
     <p>From design to deployment — let's build something amazing</p>
   </div>
 
@@ -31,22 +31,22 @@
     <h2>Our Services</h2>
     <div class="services">
       <div class="service">
-        <h3>Responsive Design</h3>
+        <h2>Responsive Design</h2>
         <p>Looks perfect on any device, every time.</p>
       </div>
       <div class="service">
-        <h3>SEO Optimization</h3>
+        <h2>SEO Optimization</h2>
         <p>Get discovered with blazing speed and search visibility.</p>
       </div>
       <div class="service">
-        <h3>E-Commerce</h3>
+        <h2>E-Commerce</h2>
         <p>Sell online with secure and stylish stores.</p>
       </div>
     </div>
   </section>
 
   <section id="about" class="about">
-    <h2>About Us</h2>
+    <h3>About Us</h3>
     <p>We’re a small studio with big ideas. With years of experience building web solutions for startups, entrepreneurs, and established companies, we believe every pixel matters.</p>
   </section>
 
@@ -61,7 +61,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 WebWorks Studio</p>
+    <p>&copy; 2025 Maractive Studio</p>
   </footer>
 </body>
 </html>
