--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </nav>
 
   <div class="hero">
-    <h1>Crafting modern websites for modern businesses</h1>
-    <p>From design to deployment — let's build something amazing</p>
+    <h1>Crafting modern websites for the modern business</h1>
+    <p>Let's build something amazing</p>
   </div>
 
   <section id="services">
